--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 Linux kernel
 ============
 
+Add one line
+Second line
+
 There are several guides for kernel developers and users. These guides can
 be rendered in a number of formats, like HTML and PDF. Please read
 Documentation/admin-guide/README.rst first.
